# nanoscript

./: .gitignore  CMakeLists.txt  INITIAL_SPEC.MD  NOTES_AUTO_COMPLETE.MD  NOTES_BUILD.MD  NOTES_PHASE_ONE.MD  README.md  SETUP.MD  build.sh  clean.sh
examples/: hello.nano
llm/: CLAUDE.md  copilot-instructions.md
nano-language-support/: extension.js  language-configuration.json  package.json
nano-language-support/syntaxes/: nanoscript.tmLanguage.json
src/: ast.hpp  codegen.cpp  codegen.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp
